--- a/twentyseventeen-child/style.css
+++ b/twentyseventeen-child/style.css
@@ -102,8 +102,8 @@ div.uwp-profile-nav {
 }
 
 .APF-listing-minor-info {
-	/* display: none; */
-	width: 37%;
+	/* display: none; 
+	width: 37%; */
 	vertical-align: top;
 }
 
